--- a/markup/components/icon-button/icon-button.styl
+++ b/markup/components/icon-button/icon-button.styl
@@ -27,3 +27,18 @@
 
         &_stroke
             stroke: darkGreyColor
+
+    &_color
+
+        &_white
+            color: #fff
+
+            & ^[0]__icon_fill
+                fill: #fff
+
+            & ^[0]__icon_stroke
+                stroke: #fff
+    &_border
+
+        &_grey
+            border-color #262728
