--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -13,10 +13,12 @@ photoTapeItemWidthMobile = 60px
 
     &__item
         width: photoTapeItemWidth
+        height: photoTapeItemWidth
         position: relative
 
         +below(768px)
             width: photoTapeItemWidthMobile
+            height: photoTapeItemWidthMobile
 
         &:hover
             & > ^[0]__popup
