--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -70,6 +70,16 @@
     &__container
         display: flex
 
+    // dark filter
+    &_dark
+        background-color: darkGreyColor
+
+        & ^[0]__label
+            color: rgba(#fff, .35)
+
+        .grid:not(:first-child)
+            border-color: rgba(#efefef, .06)
+
 .filter-additional
     display: none
     box-shadow 0 10px 40px rgba(29, 29, 29, .1)
