--- a/markup/pages/model-map.pug
+++ b/markup/pages/model-map.pug
@@ -6,7 +6,7 @@ include ../components/select-city-popup/select-city-popup
 include ../components/map/map
 
 block header
-    +header.js-always-fixed
+    +header(true).js-always-fixed
 
 block content
     +map
