--- a/markup/components/model-info-popup/model-info-popup.styl
+++ b/markup/components/model-info-popup/model-info-popup.styl
@@ -10,6 +10,7 @@ modelInfoPopupMediumXPadding = 18px
     width: 258px
     background-color: #fff
     z-index: 50
+    box-sizing: border-box
 
     &::before
         content: ''
