--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -21,6 +21,12 @@
         &:not(.no-shadow)
             box-shadow: 0 10px 40px rgba(29, 29, 29, .1)
 
+        .photo-tape
+            z-index: 200
+
+            &__text
+                display: none
+
         .show-fixed
             display: block
 
