--- a/markup/components/photo-tape/photo-tape.pug
+++ b/markup/components/photo-tape/photo-tape.pug
@@ -1,18 +1,19 @@
 include ../model-info-popup/model-info-popup
 
 mixin photo-tape()
-    +b.photo-tape&attributes(attributes).swiper-container
-        +e.UL.items.swiper-wrapper
-            +e.LI.item.swiper-slide
-                +e.A.link(href='#')
-                    +e.IMG(src=`%=static=%img/content/photo-tape/1.jpg` alt=`Model 1`).photo
-                    +e.SPAN.badge
-                    +e.SPAN.text put me here
+    +b.photo-tape&attributes(attributes)
+        .swiper-container
+            +e.UL.items.swiper-wrapper
+                +e.LI.item.swiper-slide
+                    +e.A.link(href='#')
+                        +e.IMG(src=`%=static=%img/content/photo-tape/1.jpg` alt=`Model 1`).photo
+                        +e.SPAN.badge
+                        +e.SPAN.text put me here
 
-            - for (var i = 0; i < 2; i++)
-                - for (var j = 1; j <= 15; j++)
-                    +e.LI.item.swiper-slide
-                        +e.A.link(href='#')
-                            +e.IMG(src=`%=static=%img/content/photo-tape/${j}.jpg` alt=`Model ${j}`).photo
+                - for (var i = 0; i < 2; i++)
+                    - for (var j = 1; j <= 15; j++)
+                        +e.LI.item.swiper-slide
+                            +e.A.link(href='#')
+                                +e.IMG(src=`%=static=%img/content/photo-tape/${j}.jpg` alt=`Model ${j}`).photo
 
-                        +model-info-popup.__popup
+                            +model-info-popup.__popup
