--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -30,6 +30,7 @@ block content
             +demo-link('agency-list.html') 03/List_agency_1
             +demo-link('agency.html') 03/List_agency_(2-3)
             +demo-link('model-map.html') 04/Map_model 0
+            +demo-link('user-settings.html') 06/User/Settings
     +arrow-up
 
 block popups
