--- a/markup/components/layout-default/layout-default.pug
+++ b/markup/components/layout-default/layout-default.pug
@@ -22,4 +22,5 @@ html(class="no-js", lang="en")
         block popups
         block scripts
         script(src='%=static=%js/separate-js/jquery-ui.min.js')
+        script(src='%=static=%js/separate-js/jquery.scrollbar.min.js')
         script(src='%=static=%js/main%=hash=%%=min=%.js')
