--- a/markup/components/user-messages/user-messages.styl
+++ b/markup/components/user-messages/user-messages.styl
@@ -8,6 +8,13 @@
     .dotted-dropdown
         z-index: 100
 
+        &__button
+            padding-left: 24px
+            padding-right: 24px
+            transform: translateX(-24px)
+            width: initial
+            height: 100%
+
     .send-form
         flex-shrink: 0
         margin-top: 23px
@@ -48,6 +55,7 @@
             width: initial
             min-width: 278px
             flex: 0
+            flex-shrink: 0
 
             &:not(:last-child)
                 margin-bottom: 12px
@@ -56,14 +64,9 @@
         display: flex
         flex-direction: column
         box-sizing: border-box
-        padding-top: 23px
-
-    &__scroll
-        width: 100%
-        height: 100%
-        overflow: auto
-        padding-right: 28px
-        box-sizing content-box
+        padding-left: 24px
+        padding-right: 24px
+        padding-top: 24px
 
     &__header
         display: flex
@@ -72,6 +75,8 @@
         height: 65px
         border-bottom: 1px solid borderColor
         flex-shrink: 0
+        margin-left: 24px
+        margin-right: 24px
 
     &__heading
         font-family fontMain
