--- a/markup/components/user-messages/user-messages.styl
+++ b/markup/components/user-messages/user-messages.styl
@@ -87,3 +87,33 @@
         span
             color: mainColor
             margin-left: 5px
+
+    &__no-messages
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
+        width: 100%
+        height: 100%
+
+        &-picture
+            display: flex
+            align-items: center
+            justify-content: center
+            width: 78px
+            height: 78px
+            background-color: #e8e8e8
+            border-radius: 50%
+
+        &-icon
+            fill: darkGreyColor
+
+        &-text
+            margin-top: 28px
+            display: block
+            max-width 174px
+            color darkGreyColor
+            font-family fontMain
+            font-size 20px
+            font-weight 400
+            text-align: center
