--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -31,7 +31,8 @@ block content
             +demo-link('agency.html') 03/List_agency_(2-3)
             +demo-link('model-map.html') 04/Map_model 0
             +demo-link('user-settings.html') 06/User/Settings
-            +demo-link('user-messages.html') 06/User/Messages
+            +demo-link('user-messages.html') 06/User/Messages (1,2,3)
+            +demo-link('user-no-messages.html') 06/User/Message/4
     +arrow-up
 
 block popups
