--- a/markup/components/message/message.styl
+++ b/markup/components/message/message.styl
@@ -57,6 +57,9 @@
         justify-content: space-between
         align-items: center
 
+        &_full
+            height: 100%
+
     &__name
         color darkGreyColor
         font-family fontMain
