--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -33,6 +33,7 @@ block content
             +demo-link('user-settings.html') 06/User/Settings
             +demo-link('user-messages.html') 06/User/Messages (1,2,3)
             +demo-link('user-no-messages.html') 06/User/Message/4
+            +demo-link('user-visitors.html') 06/Visitors
     +arrow-up
 
 block popups
