--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -30,6 +30,9 @@
             color mainColor
 
     &_bg
+        &_main
+            background-color:  mainColor
+
         &_darkGrey
             background-color darkGreyColor
 
