--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -35,6 +35,7 @@ block content
             +demo-link('user-messages.html') 06/User/Messages (1,2,3)
             +demo-link('user-no-messages.html') 06/User/Message/4
             +demo-link('user-visitors.html') 06/Visitors
+            +demo-link('user-likes.html') 06/Likes
     +arrow-up
 
 block popups
