--- a/markup/components/message/message.pug
+++ b/markup/components/message/message.pug
@@ -28,3 +28,33 @@ mixin message-no-msg(avatar, name, date, badge, isOnline)
             +e.header._full
                 +e.SPAN.name= name
                 +e.SPAN.date= date
+
+mixin message-custom(avatar, isOnline)
+    +b.message&attributes(attributes)
+        +avatar(avatar)._size_small
+        if isOnline
+            +e.online
+        block
+
+mixin message-custom-content
+    +e.content&attributes(attributes)
+        block
+
+mixin message-custom-header(name, date)
+    +e.header&attributes(attributes)
+        +e.SPAN.name= name
+        +e.SPAN.date= date
+
+mixin message-custom-msg
+    +e.msg&attributes(attributes)
+        block
+
+mixin message-custom-badge
+    +e.badge&attributes(attributes)
+        block
+
+mixin message-custom-photos(photos)
+    +e.photos&attributes(attributes)
+        each src in photos
+            +e.photo
+                img(src='__static__img/content/'+src alt='')
