--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -36,6 +36,7 @@ block content
             +demo-link('user-no-messages.html') 06/User/Message/4
             +demo-link('user-visitors.html') 06/Visitors
             +demo-link('user-likes.html') 06/Likes
+            +demo-link('user-following.html') 06/User/Following
     +arrow-up
 
 block popups
