--- a/markup/components/reviews/reviews.styl
+++ b/markup/components/reviews/reviews.styl
@@ -8,14 +8,8 @@
         font-weight 400
         letter-spacing initial
 
-    &__form
-        position: relative
+    .send-form
         margin-top: 58px
-        padding:  27px 29px
-        display: flex
-        align-items: flex-end
-        min-height: 136px
-        background-color: #fff
 
     &__control
         width: 100%
