--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -37,6 +37,7 @@ block content
             +demo-link('user-visitors.html') 06/Visitors
             +demo-link('user-likes.html') 06/Likes
             +demo-link('user-following.html') 06/User/Following
+            +demo-link('user-activity.html') 06/User/Activity
     +arrow-up
 
 block popups
