--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -38,6 +38,7 @@ block content
             +demo-link('user-likes.html') 06/Likes
             +demo-link('user-following.html') 06/User/Following
             +demo-link('user-activity.html') 06/User/Activity
+            +demo-link('user-feeds.html') 06/User/Feeds
     +arrow-up
 
 block popups
